--- a/InvestmentTracker/Pages/Investments/Create.cshtml
+++ b/InvestmentTracker/Pages/Investments/Create.cshtml
@@ -12,6 +12,12 @@
     </div>
 
     <div class="mb-3">
+        <label asp-for="Investment.Provider" class="form-label"></label>
+        <input asp-for="Investment.Provider" class="form-control" />
+        <span asp-validation-for="Investment.Provider" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
         <label asp-for="Investment.Type" class="form-label"></label>
         <select asp-for="Investment.Type" class="form-select" asp-items="Html.GetEnumSelectList<InvestmentType>()"></select>
     </div>
