--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-page="/Investments/Index">Investments</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Values/Index">Values</a>
+                    </li>
                 </ul>
             </div>
         </div>
