add investment edit

--- a/InvestmentTracker/Pages/Investments/Index.cshtml
+++ b/InvestmentTracker/Pages/Investments/Index.cshtml
@@ -29,6 +29,7 @@
         <td>@(latest is null ? "-" : latest.Value.ToString("C") + " (" + latest.AsOf.ToShortDateString() + ")")</td>
         <td>
             <a class="btn btn-sm btn-outline-secondary" asp-page="Values" asp-route-id="@i.Id">Values</a>
+            <a class="btn btn-sm btn-outline-primary" asp-page="Edit" asp-route-id="@i.Id">Edit</a>
         </td>
     </tr>
 }
