--- a/InvestmentTracker/Pages/NotFound.cshtml
+++ b/InvestmentTracker/Pages/NotFound.cshtml
@@ -1,8 +1,8 @@
-﻿@page
+@page
 @model Microsoft.AspNetCore.Mvc.RazorPages.PageModel
 
-<h2>Something went wrong</h2>
-<p>Sorry, an unexpected error occurred. Please try again.</p>
+<h2>Page not found</h2>
+<p>The page you requested does not exist.</p>
 <p>
     <a class="btn btn-primary" asp-page="/Investments/Index">Go to Investments</a>
     <a class="btn btn-secondary" asp-page="/Values/Index">See Values</a>
