--- a/InvestmentTracker/Pages/Investments/Index.cshtml
+++ b/InvestmentTracker/Pages/Investments/Index.cshtml
@@ -12,6 +12,7 @@
             <th>Name</th>
             <th>Provider</th>
             <th>Type</th>
+            <th>Currency</th>
             <th>Recurring Amount</th>
             <th>Latest Value</th>
             <th></th>
@@ -25,6 +26,7 @@
         <td>@i.Name</td>
         <td>@(string.IsNullOrWhiteSpace(i.Provider) ? "-" : i.Provider)</td>
         <td>@i.Type</td>
+    <td>@i.Currency</td>
         <td>@(i.RecurringAmount?.ToString("C"))</td>
         <td>@(latest is null ? "-" : latest.Value.ToString("C") + " (" + latest.AsOf.ToShortDateString() + ")")</td>
         <td>
