--- a/InvestmentTracker/Pages/Values/Index.cshtml
+++ b/InvestmentTracker/Pages/Values/Index.cshtml
@@ -72,7 +72,7 @@
                 }
             </td>
             <td>
-                <form method="post" asp-page-handler="Delete" asp-route-id="@r.Id">
+                <form method="post" asp-page-handler="Delete" asp-route-id="@r.Id" data-confirm="Delete this value record?">
                     <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
                 </form>
             </td>
