--- a/InvestmentTracker/Pages/Investments/Values.cshtml
+++ b/InvestmentTracker/Pages/Investments/Values.cshtml
@@ -32,7 +32,7 @@
     </div>
 
     <h5>Add Value</h5>
-    <form method="post" class="row g-3">
+    <form method="post" asp-page-handler="AddValue" asp-route-id="@Model.Investment.Id" class="row g-3">
         <div class="col-auto">
             <input type="hidden" asp-for="NewValue.InvestmentId" />
             <label asp-for="NewValue.AsOf" class="form-label"></label>
@@ -41,7 +41,14 @@
         </div>
         <div class="col-auto">
             <label asp-for="NewValue.Value" class="form-label"></label>
-            <input asp-for="NewValue.Value" class="form-control" />
+            @if (ViewData.ModelState.IsValid)
+            {
+                <input asp-for="NewValue.Value" type="text" inputmode="decimal" class="form-control" value="" placeholder="0.00" autocomplete="off" />
+            }
+            else
+            {
+                <input asp-for="NewValue.Value" type="text" inputmode="decimal" class="form-control" placeholder="0.00" autocomplete="off" />
+            }
             <span asp-validation-for="NewValue.Value" class="text-danger"></span>
         </div>
         <div class="col-auto align-self-end">
@@ -58,7 +65,14 @@
         </div>
         <div class="col-auto">
             <label asp-for="NewContribution.Amount" class="form-label">Amount</label>
-            <input asp-for="NewContribution.Amount" class="form-control" inputmode="decimal" step="0.01" />
+            @if (ViewData.ModelState.IsValid)
+            {
+                <input asp-for="NewContribution.Amount" type="text" inputmode="decimal" class="form-control" value="" placeholder="0.00" autocomplete="off" />
+            }
+            else
+            {
+                <input asp-for="NewContribution.Amount" type="text" inputmode="decimal" class="form-control" placeholder="0.00" autocomplete="off" />
+            }
             <span asp-validation-for="NewContribution.Amount" class="text-danger"></span>
         </div>
         <div class="col-auto align-self-end">
