service layer implementation

--- a/InvestmentTracker/Pages/Investments/Index.cshtml
+++ b/InvestmentTracker/Pages/Investments/Index.cshtml
@@ -19,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var i in Model.Items)
+@foreach (var i in Model.Investments)
 {
     var latest = i.Values.OrderByDescending(v => v.AsOf).FirstOrDefault();
     <tr>
