--- a/InvestmentTracker/Pages/Investments/Edit.cshtml
+++ b/InvestmentTracker/Pages/Investments/Edit.cshtml
@@ -37,7 +37,7 @@
 
     <div class="mt-4">
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" asp-page="Index">Cancel</a>
+        <a class="btn btn-secondary" asp-page="List">Cancel</a>
     </div>
 </form>
 
