--- a/InvestmentTracker/Pages/Investments/List.cshtml
+++ b/InvestmentTracker/Pages/Investments/List.cshtml
@@ -1,5 +1,5 @@
 @page
-@model InvestmentTracker.Pages.Investments.IndexModel
+@model InvestmentTracker.Pages.Investments.ListModel
 @using InvestmentTracker.Models
 
 <h2>Investments</h2>
