--- a/InvestmentTracker/Pages/Shared/_Layout.cshtml
+++ b/InvestmentTracker/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - InvestmentTracker</title>
+    <title>@ViewData["Title"] - Fin App</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/InvestmentTracker.styles.css" asp-append-version="true"/>
@@ -12,19 +12,25 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Investments/Index">InvestmentTracker</a>
+            <a class="navbar-brand" asp-area="" asp-page="/Index">Fin App</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Investments/Index">Investments</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Values/Index">Values</a>
-                    </li>
+                    @{
+                        var path = ViewContext.HttpContext.Request.Path;
+                        if (path.StartsWithSegments("/Investments") || path.StartsWithSegments("/Values"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Investments/List">Investments</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Values/Index">Values</a>
+                            </li>
+                        }
+                    }
                 </ul>
             </div>
         </div>
@@ -37,7 +43,7 @@
 </div>
 
 <footer class="border-top footer text-muted">
-    <div class="container">&copy; 2025 - InvestmentTracker</div>
+    <div class="container">&copy; 2025 - Fin App</div>
 </footer>
 
 <!-- Global Confirm Modal -->
