--- a/InvestmentTracker/Pages/Values/Index.cshtml
+++ b/InvestmentTracker/Pages/Values/Index.cshtml
@@ -26,7 +26,7 @@
     <div class="col-auto">
         <button type="submit" class="btn btn-primary">Apply</button>
         <a class="btn btn-outline-secondary" asp-page="/Values/Index">Reset</a>
-        <a class="btn btn-secondary" asp-page="/Investments/Index">Back to Investments</a>
+        <a class="btn btn-secondary" asp-page="/Investments/List">Back to Investments</a>
     </div>
 </form>
 <table class="table table-striped table-sm">
